(vendored_dirs ./ebsl)

(library
 (name fc_generic)
 (modules fc_generic))

; (executable
;  (name fc)
;  (libraries domainslib base fmt logs logs.fmt benchmark)
;  (preprocess
;   (pps ppx_deriving.show))
;  (modules fc))

(executable
 (name fcq)
 (libraries fc_generic domainslib fmt schedulr)
 (preprocess
  (pps ppx_deriving.show))
 (modules fcq util))

(executable
 (name scheduler)
 (libraries fc_generic domainslib fmt schedulr)
 (modules scheduler))

(env
 (dev
  (flags
   (:standard -w -32-67))))
