(vendored_dirs ./ebsl)

(library
 (name fc_generic)
 (libraries fmt schedulr)
 (preprocess
  (pps ppx_deriving.show))
 (modules fc_generic))

(library
 (name fcq)
 (libraries fc_generic domainslib fmt schedulr)
 (preprocess
  (pps ppx_deriving.show))
 (modules fcq util))

(executable
 (name fcq_dlib)
 (libraries fcq)
 (modules fcq_dlib))

(executable
 (name scheduler)
 (libraries fc_generic domainslib fmt schedulr)
 (modules scheduler))

(tests
 (names lifo fifo hybrid baseline)
 (libraries schedulr fcq benchmark)
 (modules lifo fifo hybrid baseline))

(env
 (dev
  (flags
   (:standard -w -32-67))))
