; (library
;  (name lib)
;  ;  (preprocess
;  ;   (pps ppx_deriving.show))
;  (modules fc_queue flat_combiner)
;  (libraries fmt logs domainslib))

(env
 (dev
  (flags
   (:standard -w -27-69-37-32))))

(library
 (name fc_generic_domains)
 (modules fc_generic_domains))

(library
 (name fc_generic_threads)
 (libraries threads)
 (modules fc_generic_threads))

(library
 (name fcq_threads)
 (libraries fc_generic_threads)
 (modules fcq_threads))

(library
 (name fcq_domains)
 (libraries fc_generic_domains)
 (modules fcq_domains))

; (executables
;  (names main fcq_threads fcq_domains)
;  (libraries
;   fc_generic_domains
;   fc_generic_threads
;   logs
;   cmdliner
;   fmt
;   logs.fmt
;   logs.cli
;   fmt.cli
;   fmt.tty)
;  (modules main fcq_threads fcq_domains))

; (executables
;  (names main fcq_domains)
;  (libraries
;   fc_generic_domains
;   logs
;   cmdliner
;   fmt
;   logs.fmt
;   logs.cli
;   fmt.cli
;   fmt.tty)
;  (modules main fcq_domains))
