(library
 (name util)
 (modules util))

(test
 (name test_fcq_threads)
 (libraries fcq_threads util)
 (modules test_fcq_threads))

(test
 (name test_fcq_domains)
 (libraries fcq_domains util)
 (modules test_fcq_domains))

; (test
;  (name main)
;  (libraries alcotest)
;  (modules main))

(test
 (name test_lock_queue)
 (libraries queues util)
 (modules test_lock_queue))

(test
 (name test_mpmc_queue)
 (libraries queues util)
 (modules test_mpmc_queue))

; (libraries lib core core_bench core_unix.command_unix))

; (executable
;  (name logging)
;  (modules logging)
;  (libraries logs cmdliner fmt logs.fmt logs.cli fmt.cli fmt.tty))

(env
 (dev
  (flags
   (:standard -w -32))))
