(library
 (name util)
 (modules util))

(library
 (name test_fcq_threads)
 (libraries util fcq_threads)
 (modules test_fcq_threads))

(library
 (name test_fcq_domains)
 (libraries fcq_domains util)
 (modules test_fcq_domains))

(library
 (name test_lock_queue)
 (libraries queues util)
 (modules test_lock_queue))

(test
 (name main)
 (libraries alcotest test_fcq_threads test_fcq_domains test_lock_queue)
 (modules main))

(test
 (name speedtest)
 (libraries benchmark test_fcq_domains test_fcq_threads test_lock_queue)
 (modules speedtest))

; (test
;  (name test_mpmc_queue)
;  (libraries queues util)
;  (modules test_mpmc_queue))

; (libraries lib core core_bench core_unix.command_unix))

; (executable
;  (name logging)
;  (modules logging)
;  (libraries logs cmdliner fmt logs.fmt logs.cli fmt.cli fmt.tty))

(env
 (dev
  (flags
   (:standard -w -32))))
