(library
 (name util)
 (modules util))

(library
 (name test_fcq_threads)
 (libraries util fcq_threads alcotest)
 (modules test_fcq_threads))

(library
 (name test_fcq_domains)
 (libraries util fcq_domains alcotest)
 (modules test_fcq_domains))

(library
 (name test_lock_queue)
 (libraries util queues alcotest)
 (modules test_lock_queue))

(library
 (name test_mpmc_queue)
 (libraries queues util alcotest)
 (modules test_mpmc_queue))

(test
 (name main)
 (libraries
  alcotest
  test_fcq_threads
  test_fcq_domains
  test_lock_queue
  test_mpmc_queue)
 (modules main))

(test
 (name speedtest)
 (libraries
  benchmark
  test_fcq_domains
  test_fcq_threads
  test_lock_queue
  test_mpmc_queue
  lockfree_queue)
 (modules speedtest))

; (libraries lib core core_bench core_unix.command_unix))

; (executable
;  (name logging)
;  (modules logging)
;  (libraries logs cmdliner fmt logs.fmt logs.cli fmt.cli fmt.tty))

(env
 (dev
  (flags
   (:standard -w -32))))
